--- a/mediation.qmd
+++ b/mediation.qmd
@@ -79,7 +79,7 @@ knitr::include_graphics("img/mediation_1_diagram_2.png")
 
 # The simple mediation model
 
-Estimating a mediation model implies finding three different coefficients (*a*, *b*, and *c'*), and three derived *effects* (*total*, *indirect*, *direct*), by fitting three different regression models.
+Estimating a mediation model implies finding three different coefficients (*`a`,* *`b`*, and *`c'`*, and three derived *effects* (*total*, *indirect*, *direct*), by fitting three different regression models.
 
 ```{r echo=FALSE}
 knitr::include_graphics("img/mediation_1_diagram_1.png")
@@ -140,40 +140,38 @@ knitr::include_graphics("img/mediation_1_diagram_3.png")
 
 -   The rest of the difference, 0.2544 units (95% CI \[-0.2522, 0.7609\]), is the *direct effect* of page manipulation on reported reactions, which is independent of the effects of page manipulation on reaction through PMI.
 
-## Inference
+## Inference: test based on normal theory and bootstrapping
 
 When coming to statistical inference, and thus to the "statistical significance" of the coefficients, the output reports *p-values* and *confidence intervals*.
 
 Inferential methods have different characteristics for the direct effect and the indirect effect: Inference for the direct effect (and the total effect) is simple and non-controversial, while the case of indirect effect is more complex.
 
-Regarding the direct effect, the inference can be framed in terms of a p-value (through *hypothesis testing*) or confidence interval. In the example above, the direct effect of the experimental condition, independent from the mediator, amounts to 0.2544 units (95% CI \[-0.2522, 0.7609\], p-value: 0.3221). In this case, the p-value and the confidence interval show that the effect is not statistically significant: the p-value is above the standard threshold of 0.05, while the confidence interval includes zero (when it does so, it means that it is possible that it is equal to zero).
+Regarding the direct effect, the inference can be framed in terms of a p-value (through *hypothesis testing*) or confidence interval. In the example above, the direct effect of the experimental condition, independent from the mediator, amounts to 0.2544 units (95% CI \[-0.2522, 0.7609\], p-value: 0.3221). In this case, the p-value and the confidence interval show that the effect is not statistically significant: the p-value is above the standard threshold of 0.05, while the confidence interval *includes zero* (when it does so, it means that it is possible that it is equal to zero, hence, it is considered to be not statistical significant).
 
 Regarding the indirect effect, there are two possibilities:
 
--   Calculating the p-value through a hypothesis test, relying the *assumption of normality* of the sampling distribution
--   Using a particular technique called *bootstrapping*
+-   Calculating the p-value through a hypothesis test, relying the *assumption of normality* of the sampling distribution.
+-   Using a particular technique called ***bootstrapping.***
 
 In the bottom part of the output of *process*, are both the *indirect effect(s) of X on Y*, in the confidence interval form, and the *normal theory test for indirect effect(s)*, in the p-value form.
 
-Based on statistical research, the recommendation is, in general, to avoid the normal theory test for indirect effect(s) approach, and to interpret the confidence intervals. This approach would be better in several empirical circumstances, and more powerful in detecting statistical significance.
+Hayes suggests that, based on statistical research, the recommendation is, in general, to avoid the normal theory test for indirect effect(s) approach, and to *interpret the confidence intervals* obtained using bootstrapping. This approach would be better in several empirical circumstances, and more powerful in detecting statistical significance. We can even avoid calculating the normal theory test by removing `normal = 1` from the function `process`.
 
-We can avoid calculating the normal theory test by removing `normal = 1` from the function `process`.
+*Bootstrapping and normal theory test do not necessarily lead to the same conclusions*. For instance, in the example, the p-value of the indirect effect is not statistically significant (p-value = 0.0635, \> 0.05), while the bootstrapping confidence interval is statistically significant (it does not include zero: 95% CI \[0.0143, 0.5254\]).
 
-For instance, in the example, the p-value of the indirect effect is not statistically significant (p-value = 0.0635, \> 0.05), while the bootstrapping confidence interval is statistically significant (it does not include zero: 95% CI \[0.0143, 0.5254\]).
+### Bootstrapping
 
-We already saw that confidence intervals can be calculated through standard errors based on the Central Limit Theorem, and thus based on theoretical assumptions regarding the sampling distribution.
+Confidence intervals can also be calculated through standard errors based on the Central Limit Theorem, based on theoretical assumptions regarding the sampling distribution. In this case, instead, they are calculated through *bootstrapping*, which is a procedure based on *resampling with replacement*. Also in this case, it is of fundamental importance that the sample is a miniature representation of the original population.
 
-In this case, instead, they are calculated through *bootstrapping*. It is a procedure based on *resampling with replacement*. Also in this case, it is of fundamental importance that the sample is a miniature representation of the original population.
+Resampling with replacement is a resampling method that create new samples by choosing, in a random way, the cases that compose an initial sample, where *the* *same case can be chosen more than once* (random sampling with repleacement):
 
-Resampling with replacement is a resampling method that create new samples by choosing, in a random way, the cases that compose an initial sample. The particularity is that *the* *same case can be chosen more than once*:
-
-> Suppose case 1 in the original sample is"Joe." Joe happened to be contacted for participation in the study and provided data to the effort. In the resampling PROCESS, Joe functions as a stand-in for himself and anyone else like him in the pool of potential research participants, as defined by Joe's measurements on the variables in the model. The original sampling could have sampled several Joes or none, depending in part on the luck of the draw.
+> Suppose case 1 in the original sample is "Joe." Joe happened to be contacted for participation in the study and provided data to the effort. In the resampling process, Joe functions as a stand-in for himself and anyone else like him in the pool of potential research participants, as defined by Joe's measurements on the variables in the model. The original sampling could have sampled several Joes or none, depending in part on the luck of the draw.
 
 In bootstrapping, a large number of samples are drawn from the sample (e.g. 5,000 is the default in PROCESS. Also 10,000 is commonly used), using the just mentioned random sampling with replacement.
 
 Next, the indirect effect (the statistic of interest in this case) is calculated based on each sample.
 
-Finally, the confidence intervals are found by dividing the distribution in 100 parts (*percentiles*), and taking the value corresponding to the 2.5 percentile (lower boundary of the 95% confidence interval), and the 97.5 percentile (upper boundary of the 95% confidence interval).
+Finally, the confidence intervals are found by dividing the resulting distribution of indirect effects in 100 parts (*percentiles*), and taking the value corresponding to the 2.5 percentile (lower boundary of the 95% confidence interval), and the 97.5 percentile (upper boundary of the 95% confidence interval).
 
 A difference between confidence intervals calculated using standard errors (relying on the "theoretical" sampling distribution), and those calculated through bootstrapping, is that the former is always *symmetrical* (the upper and lower bound of the confidence interval are equidistant from the point estimate), while the latter can be *asymmetrical*, depending on the shape of the distribution.
 
@@ -219,40 +217,14 @@ Two entrepreneurs who differ by one unit in their economic stress are estimated 
 
 This indirect effect is statistically different from zero, as revealed by a 95% bootstrap confidence interval that is entirely above zero (95% CI \[0.0713, 0.2033\])
 
-# Confounding variables, causal order, effect sizes, and multiple Xs and Ys
-
-## Learning outcomes
-
--   Learn to rule out alternative explanation in mediation models with reference to
-    1)  confounding variables and
-    2)  alternative casual explanations
--   Learn the meaning of "effect size" and learn how to measure it
--   Learn how to work with multiple $X$ and $Y$ variables, and the potential pitfalls thereof
-
-## Confounding variables
-
-An apparent causal association between $X$ and $M$ ($X -> M$) may be actually due to some other variable that $X$ is actually affecting, so there is the risk one will go away with the mistaken conclusion that $X$ affects $Y$ indirectly through $M$ when in fact the other variable is the mechanism variable through which $X$ exerts its effect indirectly. We can call this phenomenon as *epiphenomenal association.*
-
-That is, the association between $M$ and $Y$ may be an epiphenomenon of the fact that $X$ affects some other variable not in the model, and that other variable affects $Y$, but because $M$ is correlated with that other variable, it appears that $M$ is the variable through with $X$'s effect on $Y$ is carried.
-
-```{r echo=FALSE}
-knitr::include_graphics("img/control_1_diagram_1.png")
-```
-
-Other times the association between variables is *spurious*. For example, the fact that children who watch relatively more television are more likely to be overweight does not imply with certainty that excessive television viewing causes weight problems. Perhaps parents who don't encourage a healthy lifestyle are more likely to purchase and feed their children less healthy food that is high in fat and calories and are also less likely to encourage their children to play sports, exercise, or engage in other behaviors that are better for their bodies than just watching television. So it isn't necessarily the excessive television viewing causing the weight problems.
-
-When $X$ is *not experimentally manipulated*, then things get even worse. Absent random assignment to values of $X$, all of the associations in a mediation model are susceptible to confounding and epiphenomenal association, not just the association between $M$ and $Y$.
-
 ## Statistical controls
 
-Epiphenomenal association and confounding as threats to the validity of a causal claim can be managed at least in part through *statistical control.*
-
-If two variables $M$ (e.g., how much children watch television) and $Y$ (e.g., being outweighed) are epiphenomenally associated or confounded due to their association with some variable $C$ (e.g., how much parents encourage a healthy lifestyle in their children), then the association between $M$ and $Y$ should not exist among people who are equal on $C$ (e.g., have parents equally encouraging a healthy lifestyle in their children), no matter what they are different on $M$ (e.g., how much they watch television).
+If two variables $M$ (e.g., how much children watch television) and $Y$ (e.g., being outweighed) are confounded due to their association with some variable $C$ (e.g., how much parents encourage a healthy lifestyle in their children), then the association between $M$ and $Y$ should not exist among people who are equal on $C$ (e.g., have parents equally encouraging a healthy lifestyle in their children), no matter what they are different on $M$ (e.g., how much they watch television).
 
 In regression, if we add a variable $C$, we can get the *partial coefficient* of $M$, we interpret as the weight of the $M$ variable, *holding all the other variables in the model constant* (including $C$):
 
--   Confounding and epiphenomenal association due to $C$ can be ruled out by including $C$ as a predictor.
--   Adding $C$ to the models of $M$ and $Y$ will also remove $C$ as an epiphenomenal or confounding threat to a causal claim about the association between $X$ and $M$ and $X$ and $Y$ as well as between $M$ and $Y$.
+-   Confounding association due to $C$ can be ruled out by including $C$ as a predictor.
+-   Adding $C$ to the models of $M$ and $Y$ will also remove $C$ as a confounding threat to a causal claim about the association between $X$ and $M$ and $X$ and $Y$ as well as between $M$ and $Y$.
 
 More than one confounding variable can be included in the model.
 
@@ -291,7 +263,112 @@ Comparing the output for the model controlling for sex, tenure, and entrepreneur
 
 However, this kind of analysis may be done in order to see how sensitive or susceptible the results from a comparable analysis without such controls is to alternative explanations involving those variables being controlled, or it may be done because it is known a priori or based on preliminary analyses that certain variables may be producing spurious association between key variables in the causal system.
 
-*Ruling out epiphenomenality or spurious association as alternative explanations is an important part of any causal argument that includes associations that are only correlational in nature.*
+*Ruling out spurious association as alternative explanations is an important part of any causal argument that includes associations that are only correlational in nature.* We'll see more about that after the exercise.
+
+# Exercise
+
+Read the following paper and replicate the *study 1* analysis using the provided data. Carefully observe how the data, the measures, the method and the analysis are presented in the paper.
+
+> Thomas, M. F., Binder, A., & Matthes, J. (2022). [The agony of partner choice: The effect of excessive partner availability on fear of being single, self-esteem, and partner choice overload.](https://www.sciencedirect.com/science/article/pii/S0747563221003009) *Computers in Human Behavior*, *126*, 106977.
+
+```{r}
+# this data set is save as "sav".
+# We can use the "haven" library to read it.
+library(haven)
+
+dat <- read_sav("data/agonyofpartnerchoice_study1.sav")
+```
+
+Follow these steps:
+
+1.  Check the fitted mediation model (Figure 1) and take note of the variables in the model.
+
+2.  Read about participants in the experiment (section 2.2) and focus your attention on the measures (section 2.3) to understand how the variables were measured. Except for one variable, which was measured by one item in the survey, the other two variables were measured by two and three items. Check the variables in the data set, and identify the items necessary to construct the three variables in the model.
+
+3.  In this case, the final variable is obtained by averaging the items. The data set already include the final variables. Identify them.
+
+4.  Continue reading the Measures section (2.3) and take note of the control variables used in the model. Identify the variables in the data set. In this case, the control variable "Dummy_Female" is used in the model in place of "gender".
+
+5.  Take note of people excluded from the analysis and the reason why. You also need to remove these subjects from the data set before running the analysis. You can use the `dplyr` function `filter`.
+
+6.  Explore the variables to learn about the coding using the `haven` function `print_labels` (e.g.: `print_labels(dat$RsStatus`)
+
+7.  Fit the mediation model using Process.
+
+```{r echo=FALSE}
+
+# Variables ----------------
+
+# Independent variable (X): DAuse
+# Moderator (M): Perceived Partner Availability (ppa)
+# Dependent variable (Y): Fear of Being Single (fbs)
+# Control variables: age, gender, RsStatus
+
+# Seventeen people were excluded from analysis ----------------
+# because they had not disclosed their relationship status (RsStatus=3)
+
+library(tidyverse)
+
+dat_final <- dat %>%
+  filter(RsStatus != 3)
+
+# Estimating the mediation model with Process  ----------------
+
+process(dat_final, y = "FOBS", x = "DAuse", m = "PartnerAvail", 
+        cov = c("age", "Dummy_Female", "RsStatus"),
+        total = 1, normal = 1, model = 4, progress=0,
+        boot = 10000, 
+        decimals = 9.2,
+        seed=31216)
+
+
+# Create the variables ourself ----------------
+
+# Moderator (M): Perceived Partner Availability (ppa)
+# two items: Partner_Availabilty1 and Partner_Availabilty2
+
+dat_final <- dat_final %>%
+  mutate(ppa = (Partner_Availabilty1 + Partner_Availabilty2)/2)
+
+# Create the dependent variable (Y) ----------------
+# Fear of Being Single (fbs)
+
+dat_final <- dat_final %>%
+  mutate(fbs = (FearBeingSingle1 + FearBeingSingle2 + FearBeingSingle3)/3)
+
+# Estimating the mediation model with Process  ----------------
+
+process(dat_final, y = "fbs", x = "DAuse", m = "ppa", 
+        cov = c("age", "Dummy_Female", "RsStatus"),
+        total = 1, normal = 1, model = 4, progress=0,
+        boot = 10000, 
+        decimals = 9.2,
+        seed=31216)
+```
+
+# Confounding variables, causal order, effect sizes, and multiple Xs and Ys
+
+## Learning outcomes
+
+-   Learn to rule out alternative explanation in mediation models with reference to
+    1)  confounding variables and
+    2)  alternative casual explanations
+-   Learn the meaning of "effect size" and learn how to measure it
+-   Learn how to work with multiple $X$ and $Y$ variables, and the potential pitfalls thereof
+
+## Confounding variables
+
+An apparent causal association between $X$ and $M$ ($X -> M$) may be actually due to some other variable that $X$ is actually affecting, so there is the risk one will go away with the mistaken conclusion that $X$ affects $Y$ indirectly through $M$ when in fact the other variable is the mechanism variable through which $X$ exerts its effect indirectly. We can call this phenomenon as *epiphenomenal association.*
+
+That is, the association between $M$ and $Y$ may be an epiphenomenon of the fact that $X$ affects some other variable not in the model, and that other variable affects $Y$, but because $M$ is correlated with that other variable, it appears that $M$ is the variable through with $X$'s effect on $Y$ is carried.
+
+```{r echo=FALSE}
+knitr::include_graphics("img/control_1_diagram_1.png")
+```
+
+Other times the association between variables is *spurious*. For example, the fact that children who watch relatively more television are more likely to be overweight does not imply with certainty that excessive television viewing causes weight problems. Perhaps parents who don't encourage a healthy lifestyle are more likely to purchase and feed their children less healthy food that is high in fat and calories and are also less likely to encourage their children to play sports, exercise, or engage in other behaviors that are better for their bodies than just watching television. So it isn't necessarily the excessive television viewing causing the weight problems.
+
+When $X$ is *not experimentally manipulated*, then things get even worse. Absent random assignment to values of $X$, all of the associations in a mediation model are susceptible to confounding and epiphenomenal association, not just the association between $M$ and $Y$.
 
 # Causal order
 
@@ -825,9 +902,3 @@ In this unit we learned:
 -   How to use progress to fit parallel and serial multiple mediation models and how to interpret them.
 -   The characteristic of a multicategorical variable (and the difference between dichotomous and continuous variables).
 -   How to use R PROGRESS to fit a mediation model with multicategorical X variable, and how to interpret the output of the model.
-
-# Exercise
-
-Read the following paper and replicate the study 1 analysis using the provided data. Write a short report with diagrams, tables, and the interpretation of results.
-
-Thomas, M. F., Binder, A., & Matthes, J. (2022). [The agony of partner choice: The effect of excessive partner availability on fear of being single, self-esteem, and partner choice overload.](https://www.sciencedirect.com/science/article/pii/S0747563221003009) *Computers in Human Behavior*, *126*, 106977.
